--- a/src/app/empleados/components/tabla/tabla.component.html
+++ b/src/app/empleados/components/tabla/tabla.component.html
@@ -6,10 +6,10 @@
         <th>Salario</th>
         <th>Edad</th>
     </tr>
-    <tr>
-        <!-- <td>{{ employee.id }}</td>
+    <tr *ngFor = "let employee of employees">
+        <td>{{ employee.id }}</td>
         <td>{{ employee.employee_name }}</td>
         <td>{{ employee.employee_salary }}</td>
-        <td>{{ employee.employee_age }}</td> -->
+        <td>{{ employee.employee_age }}</td>
     </tr>
 </table>
